tests/ui/feature-gates/feature-gate-min-generic-const-args.stderr
error: generic parameters may not be used in const operations
  --> $DIR/feature-gate-min-generic-const-args.rs:8:29
   |
LL | fn foo<T: Trait>() -> [u8; <T as Trait>::ASSOC] {
   |                             ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error[E0658]: `type const` syntax is experimental
  --> $DIR/feature-gate-min-generic-const-args.rs:2:5
   |
LL |     type const ASSOC: usize;
   |     ^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: associated `type const` are unstable
  --> $DIR/feature-gate-min-generic-const-args.rs:2:5
   |
LL |     type const ASSOC: usize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
